# MR_Drone

./: CMakeLists.txt  README.md  adv_pid_read.py  adv_pid_test.cpp  betafly_read.ipynb  betafly_read.py  data.txt  pid_test.cpp  temp.py  testfile.cpp
betaflight_c/: CMakeLists.txt
betaflight_c/SITL/: platform_mcu.h  target.h
betaflight_c/common/: CMakeLists.txt  crc.c  crc.h  maths.c
betaflight_c/config/: CMakeLists.txt  config.c  config.h  feature.h  simplified_tuning.c  simplified_tuning.h
betaflight_c/drivers/: CMakeLists.txt
betaflight_c/drivers/accgyro/: accgyro.h
betaflight_c/fc/: CMakeLists.txt  core.c  core.h  rc.c  rc.h  rc_controls.c  rc_controls.h  runtime_config.c
betaflight_c/flight/: CMakeLists.txt  imu.c  imu.h  mixer.c  mixer.h  mixer_init.c  mixer_init.h  pid.c  pid.h  pid_init.c
betaflight_c/pg/: CMakeLists.txt  pg.h
betaflight_c/rx/: CMakeLists.txt  rx.c  rx.h
betaflight_c/sensors/: CMakeLists.txt  acceleration.c  acceleration.h  battery.c  battery.h  gyro.c  gyro.h  sensors.h
betaflight_c/simio/: CMakeLists.txt  posture_controller.h  simio.c  simio.h
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/betaflight_c/: Makefile  cmake_install.cmake
build_debug/betaflight_c/SITL/: Makefile  cmake_install.cmake
build_debug/betaflight_c/common/: Makefile  cmake_install.cmake
build_debug/betaflight_c/config/: Makefile  cmake_install.cmake
build_debug/betaflight_c/drivers/: Makefile  cmake_install.cmake
build_debug/betaflight_c/fc/: Makefile  cmake_install.cmake
build_debug/betaflight_c/flight/: Makefile  cmake_install.cmake
build_debug/betaflight_c/pg/: Makefile  cmake_install.cmake
build_debug/betaflight_c/rx/: Makefile  cmake_install.cmake
build_debug/betaflight_c/sensors/: Makefile  cmake_install.cmake
build_debug/betaflight_c/simio/: Makefile  cmake_install.cmake
build_debug/l1_adaptive_c/: Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  adv_pid_test  cmake_install.cmake  pid_test  test1
build_release/betaflight_c/: Makefile  cmake_install.cmake
build_release/betaflight_c/SITL/: Makefile  cmake_install.cmake
build_release/betaflight_c/common/: Makefile  cmake_install.cmake
build_release/betaflight_c/config/: Makefile  cmake_install.cmake
build_release/betaflight_c/drivers/: Makefile  cmake_install.cmake
build_release/betaflight_c/fc/: Makefile  cmake_install.cmake
build_release/betaflight_c/flight/: Makefile  cmake_install.cmake
build_release/betaflight_c/pg/: Makefile  cmake_install.cmake
build_release/betaflight_c/rx/: Makefile  cmake_install.cmake
build_release/betaflight_c/sensors/: Makefile  cmake_install.cmake
build_release/betaflight_c/simio/: Makefile  cmake_install.cmake
build_release/l1_adaptive_c/: Makefile  cmake_install.cmake
python_testfile/: posture_controller.py
